Adding storageclassname to bind to local demolabs

--- a/nexus2-persistent-template.yaml
+++ b/nexus2-persistent-template.yaml
@@ -146,6 +146,7 @@ objects:
     resources:
       requests:
         storage: ${VOLUME_CAPACITY}
+    storageClassName: gluster-container
 parameters:
 - displayName: Sonatype Nexus service name
   name: SERVICE_NAME
